--- a/html/init.html
+++ b/html/init.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<head>
+  <title>
+    MY YOUTUBE
+  </title>
+</head>
+<body>
+  <div class="topBar">
+    <h1>MY YOUTUBE</h1>
+    
+    </div>
+</body>
