So yeah the project completely changed.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../css/main.css">
   <script src="../javascript/youtubeSearchEngine.js"></script>
+  <style>
+    .youtube-player{
+      border: 1px solid #1D740C;
+      height: 390px;
+      width: 480px;
+      padding: 0px;
+      margin-left: 25px;
+      margin-bottom: 25px;
+      }
+  </style>
   
-</head>
-
-<body><iframe src="https://www.youtube.com/embed/fx2Z5ZD_Rbo"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/fx2Z5ZD_Rbo"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/fx2Z5ZD_Rbo"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/ucRVDoFkcxc"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/ucRVDoFkcxc"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/ucRVDoFkcxc"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/ucRVDoFkcxc"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/aRNVpB5mgo4"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/aRNVpB5mgo4"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/aRNVpB5mgo4"  style="margin: auto; position: flex;" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+</head><iframe src="https://www.youtube.com/watch?v=fx2Z5ZD_Rbo" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/watch?v=ucRVDoFkcxc" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/watch?v=0hBfDMtYM3s" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/watch?v=1w4BzIYa4lI" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/watch?v=Y1GtmbwhnCk" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/watch?v=f_7qITHwi2U" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/watch?v=EMVNMGVLUec" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/watch?v=wxGbab9s7NU" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/watch?v=oJs3YNOw2z8" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/watch?v=4GyKH3ZyO-I" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
