added a file to store preferences

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <head>
   <title>
     MY YOUTUBE
@@ -18,5 +17,27 @@
       margin-bottom: 25px;
       }
   </style>
-  
-</head><iframe src="https://www.youtube.com/embed/8jXjK7kfRmY" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/9eZdQ-utHaU" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/I4vAhN303r4" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/0MSnZ4y46aU" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/gldNVikcg-M" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/2pLUVL1VQkk" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/5gWUfMP7jAo" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/x1zTKWr283w" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/bcdI-64c0xE" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe><iframe src="https://www.youtube.com/embed/Dhk8ASEJqUo" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+</head>
+<body>
+  <h1>Template</h1>
+<iframe src="https://www.youtube.com/embed/mBuHQeL-OO8" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/qs2HzP9Q9eg" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/wnXnrso12Sg" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/B2UsDy3l1gk" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/nu_fFiL2WFs" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/PdoOUq036eU" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/oVhm2mXjJLs" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/W8D6PH2uHig" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/rxC8TZoizrw" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/_dRPcxNYNFM" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/E_elkfHGA4I" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/30hhMmysmXc" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/eRP_0U3ouoM" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/XlgryjSIkEY" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/Z72p1L2CfRY" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/KeT4q0UgK8s" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/0UM668I4CvA" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/2DyzO5u5dUQ" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/GpXDbFZ-AeY" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+<iframe src="https://www.youtube.com/embed/UaServF_L4Q" class="youtube-player" allowfullscreen="" scrolling="no" allow="encrypted-media"></iframe>
+</body>
